--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>My First Website:)!!!</title>
+		<title>ZZZZZZZZZZZErroR!</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
