Changed Index to hotfix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	<div>
-		<h1> In a branch! My Website :) smile back</h1>
+		<h1> In the hotfix branch!In a branch! My Website :) smile back</h1>
 		<div>
  			My New Section
 		</div>
